--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-pwa": "^5.6.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-icons": "^5.5.0",
     "styled-components": "^6.2.0"
   },
   "devDependencies": {
